--- a/requirements.txt
+++ b/requirements.txt
@@ -19,3 +19,11 @@ pytest-cov>=4.1.0
 # Code quality
 black>=23.0.0
 ruff>=0.1.0
+
+# Jupyter notebook support
+jupyter>=1.0.0
+ipykernel>=6.25.0
+
+# Visualization
+matplotlib>=3.7.0
+seaborn>=0.12.0
